--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,8 +16,10 @@
     "dotenv": "^16.4.7",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "mapbox-gl": "^3.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
@@ -33,6 +35,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
-    "vite": "^5.4.11"
+    "vite": "^5.4.14"
   }
 }
